# clockode

./: Cargo.toml  README.md  build.rs  cargo-sources.json  dev.mariinkys.Clockode.json  dev.mariinkys.Clockode.yaml  justfile
.github/workflows/: release.yml
fonts/: iced-twofa.toml
resources/: dev.mariinkys.Clockode.desktop  dev.mariinkys.Clockode.metainfo.xml
src/: app.rs  config.rs  icon.rs  icons.rs  main.rs  screen.rs  style.rs
src/app/: core.rs  screen.rs  utils.rs  widgets.rs
src/app/core/: database.rs  entry.rs
src/app/screen/: create.rs  homepage.rs  unlock.rs
src/app/screen/homepage/: settings.rs  upsert.rs
src/app/screen/homepage/upsert/: scan_qr.rs
src/app/utils/: database.rs  input.rs  qr.rs  style.rs  time.rs
src/app/widgets/: dot.rs  toast.rs
src/core/: entry.rs  mod.rs  otp_uri.rs  vault.rs
src/screen/: vault.rs
src/widgets/: toast.rs
