[package]
name = "clockode"
description = "TOTP client made with Iced"
authors = ["mariinkys <kysdev.owjga@aleeas.com>"]
version = "0.1.4"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/mariinkys/clockode"

[dependencies]
anywho = "0.1.2"
iced = { version = "0.14.0", default-features = true, features = [
    "tokio",
    "image",
    "advanced",
    "svg",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
